Set player between 3 and 18 +  refactor